--- a/MonoGameServer/Web.config
+++ b/MonoGameServer/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
 
-<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-cgMonoGameServer2015-20150923014057.mdf;Initial Catalog=aspnet-cgMonoGameServer2015-20150923014057;Integrated Security=True" providerName="System.Data.SqlClient" />
+<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+     Initial Catalog=GameDB-ppowell;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="passwd" value="ppowell$1" />
